@@ -39,4 +39,6 @@ def generate(env):
     # Based on sunSparc 8:32bit
     # ARG_MAX=1048320 - 3000 for environment expansion
     env['MAXLINELENGTH']  = 1045320
+    env['PKGINFO'] = 'pkginfo'
+    env['PKGCHK'] = '/usr/sbin/pkgchk'
     env['ENV']['PATH'] = env['ENV']['PATH'] + ':/usr/ccs/bin'
